--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <section>
-    <nav class="navbar navbar-expand-lg border border-bottom-2 shadow p-0">
+  <section class="header">
+    <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-emoji-smile-fill"
@@ -25,18 +25,24 @@
         </a>
         <form class="d-flex position-relative" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-            style="background-color: #add8e6; padding-left: 40px;">
+            style="background-color: #D1F8EF; padding-left: 40px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
             class="bi bi-search position-absolute top-50 start-0 translate-middle-y ms-3" viewBox="0 0 16 16">
             <path
               d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
           </svg>
         </form>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button type="button" class="btn messages-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+            class="bi bi-chat-right-text" viewBox="0 0 16 16">
+            <path
+              d="M2 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9.586a2 2 0 0 1 1.414.586l2 2V2a1 1 0 0 0-1-1zm12-1a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z" />
+            <path
+              d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6m0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
+          </svg>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- Navbar Dekstop -->
+        <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active d-flex flex-column align-items-center justify-content-center"
@@ -116,13 +122,79 @@
             </li>
           </ul>
         </div>
+        <!-- End Navbar Dekstop -->
       </div>
     </nav>
   </section>
+
+  <!-- Navbar Mobile -->
+  <section class="navbar-mobile">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="" class="btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-house-fill" viewBox="0 0 16 16">
+                <path
+                  d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
+                <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
+              </svg>
+              <span>Home</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-people-fill" viewBox="0 0 16 16">
+                <path
+                  d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+              </svg>
+              <span>My Network</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-plus-square-fill" viewBox="0 0 16 16">
+                <path
+                  d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+              </svg>
+              <span>Post</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell-fill"
+                viewBox="0 0 16 16">
+                <path
+                  d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901" />
+              </svg>
+              <span>Notifikation</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-briefcase-fill" viewBox="0 0 16 16">
+                <path
+                  d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5" />
+                <path
+                  d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85z" />
+              </svg>
+              <span>Jobs</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </section>
+  <!-- End Navbar Mobile -->
+
   <div class="container">
-    <div class="row pt-4">
-      <div class="col-md-2">
-        <!-- Profile -->
+    <div class="row main-content">
+      <!-- Profile -->
+      <div class="col-md-2  profile">
         <div class="card border-none shadow mb-2">
           <img src="assets/image/default-header.svg" alt="default-header" class="card-img-top">
           <div class="card-body">
@@ -172,7 +244,6 @@
             </div>
           </div>
           <hr class="mt-0 mb-0 mx-3">
-          <!-- Sidebar -->
           <div class="card-body">
             <a href="#" class="text-decoration-none text-body-secondary">
               <span style="font-size: 12px;">
@@ -187,9 +258,7 @@
               </span>
             </a>
           </div>
-          <!-- End Sidebar -->
         </div>
-        <!-- End Sidebar -->
         <div class="card border-none shadow">
           <div class="card-body">
             <ul style="list-style-type: none; padding-left: 0; margin-bottom: 0;">
@@ -227,9 +296,9 @@
             </ul>
           </div>
         </div>
-        <!-- End Sidebar -->
       </div>
-      <main class=" col-md-6">
+      <!-- End Profile -->
+      <main class="col-md-6 post-content">
         <!-- Alert -->
         <div class="card alert alert-dismissible fade show border border-light-subtle pb-0" role="alert"
           style="background-color: #FBFBFB;">
@@ -249,7 +318,7 @@
         </div>
         <!-- End Alert -->
         <!-- post -->
-        <div class="card mb-2">
+        <div class="card mb-2 post">
           <div class="card-body">
             <div class="d-flex gap-2 align-items-center mb-4">
               <img src="assets/image/default-avatar.png" class="rounded-circle" style="width: 55px; height: 55px;"
@@ -288,7 +357,7 @@
           </div>
         </div>
         <!-- post -->
-        <div class="d-flex align-items-center">
+        <div class="align-items-center filter">
           <hr class="flex-grow-1">
           <div class="btn-group d-flex align-items-center">
             <button id="dropdownButton" class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -404,7 +473,7 @@
                 </svg>
                 <span style="font-size: 16px;">Comment</span>
               </button>
-              <button type="button" class="btn d-flex align-items-center gap-1">
+              <button type="button" class="btn align-items-center gap-1 reposts">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-repeat"
                   viewBox="0 0 16 16">
                   <path
@@ -412,13 +481,13 @@
                 </svg>
                 <span style="font-size: 16px;">Repost</span>
               </button>
-              <button type="button" class="btn">
+              <button type="button" class="btn align-items-center gap-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-send-fill" viewBox="0 0 16 16">
                   <path
                     d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z" />
                 </svg>
-                <span style="font-size: 16px;">Send</span>
+                <span style="font-size: 16px;">Share</span>
               </button>
             </div>
           </div>
@@ -524,7 +593,7 @@
                 </svg>
                 <span style="font-size: 16px;">Comment</span>
               </button>
-              <button type="button" class="btn d-flex align-items-center gap-1">
+              <button type="button" class="btn align-items-center gap-1 reposts">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-repeat"
                   viewBox="0 0 16 16">
                   <path
@@ -532,20 +601,20 @@
                 </svg>
                 <span style="font-size: 16px;">Repost</span>
               </button>
-              <button type="button" class="btn">
+              <button type="button" class="btn align-items-center gap-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-send-fill" viewBox="0 0 16 16">
                   <path
                     d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z" />
                 </svg>
-                <span style="font-size: 16px;">Send</span>
+                <span style="font-size: 16px;">Share</span>
               </button>
             </div>
           </div>
         </div>
         <!-- end tweet -->
       </main>
-      <div class="col-md-3">
+      <div class="col-md-3 sidebar-kanan">
         <!-- Add to your feed -->
         <div class="card mb-2">
           <div class="d-flex justify-content-between align-items-center mx-2 my-2">
