modified:   assets/css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -45,80 +45,144 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active d-flex flex-column align-items-center justify-content-center"
-                aria-current="page" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                  class="bi bi-house-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
-                  <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
-                </svg>
+              <a class="nav-link active" aria-current="page" href="#">
+                <div>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                      class="bi bi-house-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
+                      <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
+                    </svg>
+                  </div>
+                </div>
                 <span class="title-nav">Home</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex flex-column align-items-center justify-content-center"
-                aria-current="page" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                  class="bi bi-people-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
-                </svg>
+              <a class="nav-link" aria-current="page" href="#">
+                <div>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                      class="bi bi-people-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                    </svg>
+                  </div>
+                </div>
                 <span class="title-nav">My Network</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex flex-column align-items-center justify-content-center"
-                aria-current="page" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                  class="bi bi-briefcase-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5" />
-                  <path
-                    d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85z" />
-                </svg>
+              <a class="nav-link" aria-current="page" href="#">
+                <div>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                      class="bi bi-briefcase-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5" />
+                      <path
+                        d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85z" />
+                    </svg>
+                  </div>
+                </div>
                 <span class="title-nav">Jobs</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex flex-column align-items-center justify-content-center"
-                aria-current="page" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                  class="bi bi-chat-text-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M16 8c0 3.866-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7M4.5 5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z" />
-                </svg>
+              <a class="nav-link" aria-current="page" href="#">
+                <div>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                      class="bi bi-chat-text-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M16 8c0 3.866-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7M4.5 5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z" />
+                    </svg>
+                  </div>
+                </div>
                 <span class="title-nav">Messaging</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex flex-column align-items-center justify-content-center" aria-current="page"
-                href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                  class="bi bi-bell-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901" />
-                </svg>
+              <a class="nav-link" aria-current="page" href="#">
+                <div>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                      class="bi bi-bell-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901" />
+                    </svg>
+                  </div>
+                </div>
                 <span class="title-nav">Notifikations</span>
               </a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                  class="bi bi-person-circle d-flex flex-column align-items-center justify-content-center"
-                  viewBox="0 0 16 16">
-                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                  <path fill-rule="evenodd"
-                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-                </svg>
-                <span class="title-nav">Me</span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
+            <li class="nav-item">
+              <div class="d-block position-relative m-0 p-0">
+                <button type="button" class="btn d-flex flex-column justify-content-center align-items-center"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                    class="bi bi-person-circle d-flex flex-column align-items-center justify-content-center"
+                    viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                    <path fill-rule="evenodd"
+                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                  </svg>
+                  <span class="title-nav">Me
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
+                      class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                  </span>
+                </button>
+                <ul class="dropdown-menu p-2">
+                  <li class="dropdown-menu-sub">
+                    <a href="#" class="d-flex flex-column text-decoration-none p-2">
+                      <div class="d-flex flex-row gap-2 align-items-center mb-2">
+                        <img src="assets/image/default-avatar.png" class="rounded-circle"
+                          style="width: 60px; height: 60px;" alt="default-avatar">
+                        <div>
+                          <h6 class="card-title text-uppercase fw-semibold mb-1 text-body">Rifki Darmawan</h6>
+                          <p class="card-text fw-normal text-body-secondary" style="font-size: 11px;">Palembang, Sumatra
+                            Selatan</p>
+                        </div>
+                      </div>
+                      <button type="button" class="btn btn-outline-primary rounded-pill btn-sm">
+                        <span>View Profile</span>
+                      </button>
+                    </a>
+                  </li>
+                  <hr class="dropdown-divider">
+                  <li class="dropdown-menu-sub">
+                    <div class="menu-sub d-flex flex-column px-2">
+                      <span class="pb-2" style="font-size: 16px; font-weight: 550;">Account</span>
+                      <div class="menu-sub-link d-flex flex-column gap-2">
+                        <a href="#">Setting</a>
+                        <a href="#">Help</a>
+                      </div>
+                    </div>
+                  </li>
+                  <hr class="dropdown-divider">
+                  <li class="dropdown-menu-sub">
+                    <div class="menu-sub d-flex flex-column px-2">
+                      <span class="pb-2" style="font-size: 16px; font-weight: 550;">Manage</span>
+                      <div class="menu-sub-link d-flex flex-column gap-2">
+                        <a href="#">Posts & Activity</a>
+                        <a href="#">Job Posting Account</a>
+                      </div>
+                    </div>
+                  </li>
+                  <hr class="dropdown-divider">
+                  <li class="dropdown-menu-sub px-2 pb-2">
+                    <div class="menu-sub">
+                      <div class="menu-sub-link">
+                        <a href="#">Sign Out</a>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -129,60 +193,60 @@
 
   <!-- Navbar Mobile -->
   <section class="navbar-mobile">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div>
-        <ul class="navbar-nav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light d-lg-none w-100">
+      <div class="container-fluid">
+        <ul class="navbar-nav d-flex flex-row align-items-center justify-content-around w-100">
           <li class="nav-item">
-            <a href="" class="btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                 class="bi bi-house-fill" viewBox="0 0 16 16">
                 <path
                   d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
                 <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
               </svg>
-              <span>Home</span>
+              <span class="title-nav">Home</span>
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                 class="bi bi-people-fill" viewBox="0 0 16 16">
                 <path
                   d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
               </svg>
-              <span>My Network</span>
+              <span class="title-nav">My Network</span>
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-plus-square-fill" viewBox="0 0 16 16">
                 <path
                   d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
               </svg>
-              <span>Post</span>
+              <span class="title-nav mt-1">Post</span>
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell-fill"
+            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell-fill"
                 viewBox="0 0 16 16">
                 <path
                   d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901" />
               </svg>
-              <span>Notifikation</span>
+              <span class="title-nav">Notifikation</span>
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                 class="bi bi-briefcase-fill" viewBox="0 0 16 16">
                 <path
                   d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5" />
                 <path
                   d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85z" />
               </svg>
-              <span>Jobs</span>
+              <span class="title-nav">Jobs</span>
             </a>
           </li>
         </ul>
@@ -195,7 +259,7 @@
     <div class="row main-content">
       <!-- Profile -->
       <div class="col-md-2  profile">
-        <div class="card border-none shadow mb-2">
+        <div class="card border-none mb-2">
           <img src="assets/image/default-header.svg" alt="default-header" class="card-img-top">
           <div class="card-body">
             <div class="profile">
@@ -259,7 +323,7 @@
             </a>
           </div>
         </div>
-        <div class="card border-none shadow">
+        <div class="card border-none">
           <div class="card-body">
             <ul style="list-style-type: none; padding-left: 0; margin-bottom: 0;">
               <li class="mb-2">
@@ -680,27 +744,29 @@
           </div>
         </div>
         <!-- Add to your feed -->
-        <!-- Iklan -->
-        <div class="card">
-          <img src="assets/image/poster-iklan.png" class="card-img" alt="poster iklan">
-        </div>
-        <!-- Iklan -->
-        <!-- Footer -->
-        <div class="d-flex align-items-start m-3">
-          <a href="#" class="text-decoration-none text-body-secondary">
-            <span style="font-size: 12px;">
-              © 2025 SOSMED
-            </span>
-            <br>
-            <span style="font-size: 12px;">
-              All rights reserved.
-              <span style="font-size: 10px;">
-                Powered by Rifki Darmawan
+        <div class="sub-ads">
+          <!-- Iklan -->
+          <div class="card">
+            <img src="assets/image/poster-iklan.png" class="card-img" alt="poster iklan">
+          </div>
+          <!-- Iklan -->
+          <!-- Footer -->
+          <div class="d-flex align-items-start m-3 position-sticky top-20%">
+            <a href="#" class="text-decoration-none text-body-secondary">
+              <span style="font-size: 12px;">
+                © 2025 SOSMED
               </span>
-            </span>
-          </a>
+              <br>
+              <span style="font-size: 12px;">
+                All rights reserved.
+                <span style="font-size: 10px;">
+                  Powered by Rifki Darmawan
+                </span>
+              </span>
+            </a>
+          </div>
+          <!-- Footer -->
         </div>
-        <!-- Footer -->
       </div>
     </div>
   </div>
