--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <section class="header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-emoji-smile-fill"
-            viewBox="0 0 16 16">
-            <path
-              d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8" />
-          </svg>
-        </a>
-        <div class="search-container">
+        <div class="d-flex flex-row align-items-center justify-content-between">
+          <a class="navbar-brand" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="blue" class="bi bi-emoji-smile-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8" />
+            </svg>
+          </a>
           <form class="d-flex position-relative" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
               style="background-color: #D1F8EF; padding-left: 40px;">
@@ -33,7 +33,7 @@
                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
             </svg>
           </form>
-          <button type="button" class="btn messages-btn chat-btn">
+          <button type="button" class="btn messages-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
               class="bi bi-chat-right-text" viewBox="0 0 16 16">
               <path
@@ -219,16 +219,19 @@
               <span class="title-nav">My Network</span>
             </a>
           </li>
+          <!-- Post -->
           <li class="nav-item">
-            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+            <button type="button" class="btn d-flex flex-column align-items-center justify-content-center"
+              data-bs-toggle="modal" data-bs-target="#ModalPost">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-plus-square-fill" viewBox="0 0 16 16">
                 <path
                   d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
               </svg>
               <span class="title-nav mt-1">Post</span>
-            </a>
+            </button>
           </li>
+          <!-- End Post -->
           <li class="nav-item">
             <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell-fill"
@@ -776,7 +779,8 @@
               </div>
             </div>
             <hr class="my-2">
-            <div class="d-flex flex-row justify-content-between align-items-center px-3">
+            <!-- btn action -->
+            <div class="d-flex flex-row justify-content-between align-items-center px-0 px-lg-3">
               <button type="button" class="btn d-flex align-items-center gap-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                   class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
@@ -812,6 +816,7 @@
                 <span style="font-size: 16px;">Share</span>
               </button>
             </div>
+            <!-- end btn action -->
           </div>
         </div>
         <!-- Suggested -->
