Add modal styles and update button for post functionality

--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
           </li>
           <!-- Post -->
           <li class="nav-item">
-            <button type="button" class="btn d-flex flex-column align-items-center justify-content-center"
-              data-bs-toggle="modal" data-bs-target="#ModalPost">
+            <button type="button" class="btn d-flex flex-column align-items-center justify-content-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-plus-square-fill" viewBox="0 0 16 16">
                 <path
