--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sosmed | Home</title>
   <!-- Bootstrep -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
   <!-- css -->
   <link href='assets/css/style.css' rel='stylesheet'>
 </head>
@@ -47,7 +46,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
+              <a class="nav-link active" aria-current="page" href="/index.html">
                 <div>
                   <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
@@ -199,7 +198,7 @@
       <div class="container-fluid">
         <ul class="navbar-nav d-flex flex-row align-items-center justify-content-around w-100">
           <li class="nav-item">
-            <a href="" class="btn d-flex flex-column align-items-center justify-content-center">
+            <a href="/index.html" class="btn d-flex flex-column align-items-center justify-content-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                 class="bi bi-house-fill" viewBox="0 0 16 16">
                 <path
@@ -221,14 +220,14 @@
           </li>
           <!-- Post -->
           <li class="nav-item">
-            <button type="button" class="btn d-flex flex-column align-items-center justify-content-center">
+            <a href="/post.html" type="button" class="btn d-flex flex-column align-items-center justify-content-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-plus-square-fill" viewBox="0 0 16 16">
                 <path
                   d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
               </svg>
               <span class="title-nav mt-1">Post</span>
-            </button>
+            </a>
           </li>
           <!-- End Post -->
           <li class="nav-item">
@@ -668,7 +667,8 @@
               </div>
               <!-- End Modal  Event -->
               <!-- Modal Article -->
-              <a href="" class="d-flex flex-row align-items-center" style="text-decoration: none; color: #000000;">
+              <a href="/write-article.html" class="d-flex flex-row align-items-center"
+                style="text-decoration: none; color: #000000;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#E52020"
                   class="bi bi-blockquote-left" viewBox="0 0 16 16">
                   <path
@@ -1036,9 +1036,7 @@
   <!-- Js -->
   <script defer type="text/javascript" src="assets/js/main.js"></script>
   <!-- bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
